Add major field to user registration and implement email service
- Added Major property to User model with database migration
- Updated registration form with major dropdown selection (12 engineering disciplines)
- Made email field required in registration
- Implemented EmailService for sending welcome emails
- Enhanced UI styling with improved gradients and animations
- Made responsive design improvements for mobile devices
- Fixed hero section layout for better mobile experience

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,14 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5433;Database=ForumDb;Username=postgres;Include Error Detail=true"
   },
+  "EmailSettings": {
+    "SmtpHost": "",
+    "SmtpPort": "587",
+    "SmtpUsername": "",
+    "SmtpPassword": "",
+    "FromEmail": "",
+    "FromName": "International Engineering Forum"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
